-- Almost all changes listed herein are new as of 2016. --

2016-07-19  Mats Lidell  <matsl@gnu.org>

* .gitignore: Added git ignore file.

2016-07-18  Mats Lidell  <matsl@gnu.org>

* .hypb: Added. Lost during initial commit to git.

2016-07-18  Bob Weiner  <rsw@gnu.org>

* HY-README (Installation):
* man/hyperbole.texi (Installation): Made elpa line match the default in Emacs
    so if it is already there, it won't be added again.

* hyperbole.el (hkey-override-local-bindings): Fixed case where an invalid
    key prefix is given and so local-key-binding returns a number rather than nil.

* hui-window.el (hmouse-x-coord): Added support for a marker as `args'.
  hypb.el (hypb:goto-marker): Added to jump to a marker in a different buffer.

* man/hyperbole.texi (Global Key Bindings): Changed from setting the value of
    hkey-init-override-local-keys in personal init file to using the
    customize-variable interface.

* MANIFEST: Eliminated hsite-ex.el and included hsite.el in distribution package.
    Users will use customizations now rather than direct editing of this file.

==============================================================================
V6.01 changes ^^^^:
==============================================================================

2016-07-17  Bob Weiner  <rsw@gnu.org>

* hyperbole.el (inhibit-hyperbole-messaging): Added :initialize function that skips more
    complex :set function, which is not needed at initialization.  Also moved all requires
    to before this function.

2016-07-16  Bob Weiner  <rsw@gnu.org>

* man/hyperbole.texi:
  hmouse-tag.el: Renamed all '-dirs' variables to '-path'.

2016-07-15  Bob Weiner  <rsw@gnu.org>

* hargs.el (hargs:at-p): Fixed issue when in a dired buffer and a file or
    directory is being read, the result was returned sans any path
    information; now the full path is returned properly.

* man/hyperbole.texi (Introduction): Removed Preface section and moved its