@@ -1,7 +1,7 @@
 			  ABOUT GNU HYPERBOLE
 		   Designed and Written by Bob Weiner
 	         https://www.gnu.org/software/hyperbole/
-			    Version 06.00
+			    Version 06.01
 
 GNU Hyperbole (pronounced Ga-new Hi-per-bo-lee), or just Hyperbole, is
 an efficient and programmable hypertextual information management
