@@ -1,4 +1,4 @@
-@set UPDATED July 17, 2016
+@set UPDATED July 19, 2016
 @set UPDATED-MONTH Jul 2016
-@set EDITION 06.00
-@set VERSION 06.00
+@set EDITION 06.01
+@set VERSION 06.01
